# field_robots_lab

./: .gitignore  README.md
models/: README.md
src/: README.md
src/scout_mini_description/: CMakeLists.txt  package.xml
src/scout_mini_description/launch/: display.launch.py  fleet.launch.py  gazebo.launch.py  spawn_robot.launch.py
src/scout_mini_description/rviz/: display.rviz
src/scout_mini_description/urdf/: scout_mini.gazebo.xacro  scout_mini.urdf.xacro
src/scout_mini_description/urdf/sensors/: imu.xacro  lidar_2d.xacro
src/scout_mini_description/worlds/: minimal_warehouse.world
src/telemetry_recorder/: package.xml  setup.cfg  setup.py
src/telemetry_recorder/config/: fleet_topics.yaml  scout_mini_topics.yaml
src/telemetry_recorder/launch/: recorder.launch.py
src/telemetry_recorder/telemetry_recorder/: analyzer.py  metrics.py  recorder_node.py
worlds/: README.md
