<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>telemetry_recorder</name>
  <version>0.1.0</version>
  <description>
    Telemetry recording wrapper for field_robots_lab experiments.
    Spawns ros2 bag record as a subprocess and persists experiment metadata
    alongside the bag for reproducible analysis.
  </description>

  <maintainer email="slepynina.eu@gmail.com">EugeSlepynina</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosbag2_storage_default_plugins</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
